--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "yiisoft/yii2": "^2.0"
+    "php": ">=5.6.5",
+    "yiisoft/yii2": "^2.0",
+    "yiisoft/yii2-bootstrap": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.4"
