--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.6.5",
+    "php": ">=5.4",
+    "ext-intl": "*",
     "yiisoft/yii2": "^2.0",
     "yiisoft/yii2-bootstrap": "^2.0"
   },
